--- a/es6/public/index.html
+++ b/es6/public/index.html
@@ -2,13 +2,18 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, inital-scale=1">
-  <link rel="stylesheet" href="src/lib/normalize.css">
-  <link rel="stylesheet" href="src/foo/foo.css">
   <title>Es6</title>
 </head>
 <body>
   <div id="container"></div>
   <h1>Es6</h1>
+
+  <h2>Topics</h2>
+  <ol>
+    <li>
+      <a href="session-1.html">Session 1</a>
+    </li>
+  </ol>
 
   <script src="src/bundler.js"></script>
 </body>
