--- a/es6/public/session-1.html
+++ b/es6/public/session-1.html
@@ -3,22 +3,8 @@
 
 <head>
     <meta name="viewport" content="width=device-width, inital-scale=1">
-
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Es6</title>
-    <style>
-        ol {
-            counter-reset: item;
-        }
-
-        li {
-            display: block
-        }
-
-        li:before {
-            content: counters(item, ".") " ";
-            counter-increment: item;
-        }
-    </style>
 </head>
 
 <body>
