--- a/es6/public/session-2.html
+++ b/es6/public/session-2.html
@@ -27,7 +27,13 @@
                 </ol>
             </li>
             <li>Arrow functions</li>
-            <li>Extended parameters</li>
+            <li>Extended parameters
+                <ol>
+                    <li>Default parameters</li>
+                    <li>Rest parameters</li>
+                    <li>Spread operators</li>
+                </ol>
+            </li>
             <li>Template literals</li>
             <li>Internationalization</li>
         </ol>
@@ -44,7 +50,8 @@
         <p>Read carefully the next instructions and implement the solution on src/session-2/excercise.js. The
             excercise is complete when all test cases (test/session-2/excercise) passes</p>
         <ol>
-
+            <li>Calculate the <a href="https://www.khanacademy.org/math/probability/data-distributions-a1/summarizing-spread-distributions/a/calculating-standard-deviation-step-by-step">standard deviation</a> from a sample of numbers; use: arrow functions, rest parameters and re-use average or sum functions if you'd like</li>
+            <li>Create a select function that receives a callback that will act as where clause; implement a where clause that uses endsWith, startsWith, isNaN and isFinite</li>
         </ol>
     </div>
 
