--- a/es6/public/index.html
+++ b/es6/public/index.html
@@ -14,6 +14,9 @@
     <li>
       <a href="session-1.html">Session 1</a>
     </li>
+    <li>
+      <a href="session-2.html">Session 2</a>
+    </li>
   </ol>
 
   <script src="src/bundler.js"></script>
