--- a/es6/public/session-2.html
+++ b/es6/public/session-2.html
@@ -51,7 +51,7 @@
             excercise is complete when all test cases (test/session-2/excercise) passes</p>
         <ol>
             <li>Calculate the <a href="https://www.khanacademy.org/math/probability/data-distributions-a1/summarizing-spread-distributions/a/calculating-standard-deviation-step-by-step">standard deviation</a> from a sample of numbers; use: arrow functions, rest parameters and re-use average or sum functions if you'd like</li>
-            <li>Create a select function that receives a callback that will act as where clause; implement a where clause that uses endsWith, startsWith, isNaN and isFinite</li>
+            <li>Create a select function that receives a callback that will act as where clause; implement where clauses that uses endsWith, startsWith, isNaN and isFinite</li>
         </ol>
     </div>
 
