--- a/es6/public/index.html
+++ b/es6/public/index.html
@@ -17,6 +17,9 @@
     <li>
       <a href="session-2.html">Session 2</a>
     </li>
+    <li>
+      <a href="session-3.html">Session 3</a>
+    </li>
   </ol>
 
   <script src="src/bundler.js"></script>
