--- a/es6/public/session-3.html
+++ b/es6/public/session-3.html
@@ -18,7 +18,17 @@
             <li>Generators</li>
         </ol>
     </div>
-
+    <h3>Excercises</h3>
+    <p>Read carefully the next instructions and implement the solution on src/session-2/excercise.js. The
+        excercise is complete when all test cases (test/session-2/excercise) passes</p>
+    <ol>
+        <li>Create load method that pulls data from 'exercise.mock.json' as a Promise</li>
+        <li>Creates a class named StudentsList that pulls the data from 'exercise.mock.json' as a Promise</li>
+        <li>Creates a method on StudentsList class, that gets all women students</li>
+        <li>Creates a method on StudentsList class, that get a single student by passing a callback</li>
+        <li>Creates a method on StudentsList class, that change the first_name property to firstName and last_name property to lastName.</li>
+        <li>If getStudent method doesnt pull any student by callback, return a default student named juan perez with email: juan.perez@gmail.com</li>
+    </ol>
 
 
     <script src="src/bundler.js"></script>
